tests/baselines/reference/unusedTypeParameterInMethod3.errors.txt
tests/cases/compiler/unusedTypeParameterInMethod3.ts(2,21): error TS6133: 'Z' is declared but its value is never read.


==== tests/cases/compiler/unusedTypeParameterInMethod3.ts (1 errors) ====
    class A {
        public f1<X, Y, Z>() {
                        ~
!!! error TS6133: 'Z' is declared but its value is never read.
            var a: X;
            var b: Y;
            a;
            b;
        }
    }